--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,14 @@ html {
   font-family: 'Roboto', sans-serif;
 } /*16px*/
 
+img {
+  display: block;
+  width: 100%;
+}
+
 :root {
   /* colors */
-  --primary-50: #eff6ff;
+  --primary-blue: #4a3aff;
+  --text-color-white: #fff;
+  --bg-white: #fff;
 }
