--- a/src/assets/css/admin/adminMenu.css
+++ b/src/assets/css/admin/adminMenu.css
@@ -12,24 +12,45 @@
   border-bottom: 3px solid #ebeafb;
 }
 
+.admin-sidebar {
+  font-size: 30px;
+  width: 50%;
+  color: #4a3aff;
+  margin-left: auto;
+  margin-top: 1rem;
+  display: block;
+}
 .admin-menu {
-  padding: 0.75rem;
+  padding: 0.5rem;
   margin: 0.5rem 0;
   font-size: 16px;
   color: rgba(33, 33, 33, 0.6);
   font-weight: 500;
   border-radius: 5px;
   margin: 0 1rem;
+  display: block;
 }
 
 .active-menu-border {
   border-right: 5px solid #4a3aff;
-  border-radius: 2px;
 }
 
 .active-menu-link {
   background-color: rgba(74, 58, 255, 0.22);
   color: #212121;
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+}
+
+.icon-active {
+  color: #4a3aff;
+}
+
+.menu-links {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
 }
 
 .admin-menus.other-links {
