complete-add-teacher-page

--- a/src/assets/css/admin/teachersPage.css
+++ b/src/assets/css/admin/teachersPage.css
@@ -14,7 +14,8 @@
 }
 
 .custom-file-label:hover {
-  background-color: #0056b3;
+  background-color: #4a3aff;
+  color: #fff;
 }
 
 .teachers-select-file {
