--- a/src/assets/css/admin/adminLayout.css
+++ b/src/assets/css/admin/adminLayout.css
@@ -5,5 +5,8 @@
   font-family: 'Inter', sans-serif;
   max-width: 1440px;
   margin: 0 auto;
-  height: 100%;
+}
+
+.container {
+  background-color: #fff;
 }
