--- a/src/assets/css/admin/adminLayout.css
+++ b/src/assets/css/admin/adminLayout.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&family=Lexend+Deca:wght@300;400;500;600&family=Open+Sans:wght@400;500;600;700;800&family=Playfair+Display:wght@400;500;700;800;900&family=Poppins:wght@300;400;500;700;800;900&family=Roboto:wght@500&family=Rubik:ital,wght@1,300&display=swap');
 .main-layout {
-  display: flex;
+  /* display: flex;
   grid-template-columns: 1fr 4fr;
   font-family: 'Inter', sans-serif;
   max-width: 1440px;
-  margin: 0 auto;
-  height: 1100px;
+  margin: 0 auto; */
+  /* height: 1100px; */
 }
 
 .menuContainer {
   background-color: #fff;
-  height: 100%;
+  /* height: 100%; */
 }
 .main-container{
   overflow: auto;
@@ -19,7 +19,7 @@
 }
 
 
-@media (max-width:350px){
+/* @media (max-width:450px){
   .menuContainer{
     display:none;
   }
@@ -29,5 +29,5 @@
   .main-container{
     height: fit-content;
   }
-}
+} */
 
